extracted classes from the code